# chaukas-sdk

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  langchain_chaukas.md  pyproject.toml  setup.py  test_new_events.py  test_openai_minimal.py
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  release.yml
.reuse/: dep5
chaukas/: __init__.py
chaukas/core/: agent_mapper.py  client.py  event_builder.py  events.py  proto_wrapper.py  tracer.py
chaukas/integrations/: __init__.py  crewai.py  google_adk.py  openai_agents.py
chaukas/utils/: monkey_patch.py  uuid7.py
docs/: OPENAI_EVENTS.md  RETRY_EVENTS.md
docs/integrations/: LANGCHAIN.md
examples/: README.md  analyze_event_hierarchy.py  crewai_example.py  crewai_retry_example.py  crewai_tools_example.py  google_adk_example.py  openai_agents_example.py  openai_comprehensive_example.py  openai_handoff_message_filter.py  openai_retry_example.py
examples/crewai/: .env.example  README.md  crewai_comprehensive_example.py  crewai_example.py  crewai_flows_example.py  crewai_guardrails_example.py  crewai_knowledge_example.py  crewai_retry_example.py  crewai_tools_example.py
examples/google_adk/: .env.example  README.md  google_adk_example.py
examples/langchain/: .env.example  README.md  agent_with_tools.py  custom_events_example.py  langchain_comprehensive_example.py  mcp_tools_example.py  multi_chain_workflow.py  rag_with_retriever.py  simple_chain.py  streaming_example.py
examples/openai/: .env.example  README.md  openai_comprehensive_example.py  openai_handoff_message_filter.py  openai_retry_example.py  openai_simple.py  openai_sqllite_session_example.py  openai_tools_example.py
examples/openai/mcp/prompt-server/: main.py
src/chaukas/: __init__.py
src/chaukas/core/: client.py
src/chaukas/sdk/: __init__.py
src/chaukas/sdk/core/: client.py  config.py  event_builder.py  proto_wrapper.py  tracer.py
src/chaukas/sdk/integrations/: base.py  crewai.py  google_adk.py  langchain.py  openai_agents.py  openai_agents_enhanced.py  openai_agents_refactored.py
src/chaukas/sdk/utils/: context.py  event_pairs.py  monkey_patch.py  retry_detector.py
tests/: test_client.py  test_config.py  test_crewai_retry_events.py  test_event_builder.py  test_integrations.py  test_langchain.py  test_openai_events.py  test_openai_file_mode.py  test_refactored_utilities.py  test_span_hierarchy.py  test_tracer.py
tools/: analyze_event_hierarchy.py  summarize_event_stats.py  validate_event_hierarchy.py
