[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chaukas-sdk"
version = "0.1.0"
description = "One-line instrumentation for agent building SDKs"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Chaukas"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "chaukas-spec-client>=1.0.0",
    "wrapt>=1.14.0",
    "pydantic>=2.0.0",
    "httpx>=0.24.0",
    "typing-extensions>=4.0.0",
    "protobuf>=5.26.0",
    "grpcio>=1.50.0",
    "uuid6>=2024.1.12",
    "aiofiles>=23.0.0",
]

[project.optional-dependencies]
openai = ["openai-agents>=0.5.0"]
google = ["adk"]
crewai = ["crewai"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
strict = true
warn_return_any = true
warn_unused_configs = true